# data-platform-example

./: .dockerignore  .env.docker  .env.example  .gitignore  DASHBOARD_FEATURES.md  DASHBOARD_QUICKSTART.md  DASHBOARD_README.md  Dockerfile  LAUNCH_DASHBOARD.txt  README.docker.md  README.md  VISUALIZATION_SUMMARY.md  dashboard.py  dev_dagster.sh  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dashboard.txt  run_dashboard.sh  test_dashboard_connection.py
dagster_project/: Dockerfile  __init__.py  dagster.yaml  entrypoint.sh  requirements.txt  workspace.yaml
dagster_project/assets/: __init__.py  dbt_assets.py  ingestion.py
dashboard/: Dockerfile  dashboard.py  requirements.txt  run_dashboard.sh
dashboard/.streamlit/: config.toml
dbt_project/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml  requirements.txt
dbt_project/models/int/: int_cross_border_flows.sql  int_group_behavioral_trends.sql  int_group_expansion_tracking.sql  int_gtd_enriched.sql  int_predictive_features.sql  int_region_time_series.sql  int_spacial_hotspots.sql
dbt_project/models/marts/: cross_border_risk.sql  emerging_hotspots.sql  forecasting_dataset.sql  group_clustering_features.sql  group_expansion.sql
dbt_project/models/raw/: raw_gtd.sql  sources.yml
docs/: architecture.md  dashboard.md  data_dictionary.md  gtd_fields.md
scripts/: download_gtd_data.md  setup_database.py
scripts/archive/: setup_project.sh
tests/: test_dashboard_connection.py
tmps8w7unld/history/: runs.db
tmps8w7unld/history/runs/: index.db
tmps8w7unld/schedules/: schedules.db
(+10 files in other folders)
